--- a/html-demo/index.html
+++ b/html-demo/index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="h-screen center-items bg-gray text-lg">
             <div class="p-8 bg-white rounded-lg flex-col">
+                <h1>Here is a heading!</h1>
                 <p>Here is some text!</p>
                 <p id="counter">
                     0
